--- a/Website/style.css
+++ b/Website/style.css
@@ -177,9 +177,7 @@ video{
     inset: 0;
     width: 520px;
     background-color: white;
-    margin-top: 125px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     border: solid 2px white;
     border-radius: 10px;
 }
