--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ h4:hover{
     background-color: #7289da;
 }
 
+a{
+    text-decoration: none;
+}
+
 
 .title{
     display: flex;
@@ -111,7 +115,6 @@ span{
 }
 
 .info2, .info3{
-    margin-top: -2%;
     font-size: 30px;
     min-height: 30vh;
 
