--- a/style.css
+++ b/style.css
@@ -181,4 +181,5 @@ video{
     margin: auto;
     border: solid 2px white;
     border-radius: 10px;
+    box-shadow: 0px 0px 25px -1px rgb(0 0 0);
 }
