--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@ html{
 *, *::before, *::after {
     box-sizing: border-box;
 }
-
-/* I HATE NS*/
+/* I HATE NIGGERS */
 h1{
     font-size: 20px;
     color: lightgray;
@@ -116,10 +115,6 @@ span{
 
 .info3{
     min-height: 0vh;
-}
-
-.info2{
-    margin-top: -13vh;
 }
 
 .carousel{
