--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a{
     scale: 1.3;
 
 }
-.header{
+.header, .nav-menu{
     position: relative;
     background-color: #2c2f33;
     display: flex;
@@ -52,10 +52,11 @@ a{
     padding-right: 2rem;
     border-radius: 10px;
     opacity: 85%;
+    z-index: 9999;
 }
 
 
-.section{
+.buttoninv{
     position: relative;
     display: flex;
     justify-content: center;
@@ -186,4 +187,78 @@ video{
     border: solid 2px white;
     border-radius: 10px;
     box-shadow: 0px 0px 25px -1px rgb(0 0 0);
+}
+
+.hamburger{
+    display: none;
+    cursor: pointer;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.hamburger > span{
+    
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    background-color: white;
+}
+
+@media(max-width:528px){
+    .hamburger{
+        display: block;
+    }
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav-menu{
+        position: absolute;
+        left: -100%;
+        top: 70px;
+        gap: 0;
+        flex-direction: column;
+        background-color: #2c2f33;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+        margin: 16px 0; 
+        border-radius: 0px;
+    }
+
+   h4{
+    margin: 16px 0;
+
+   }
+
+   .nav-menu.active{
+    left: 0;
+   }
+
+   .info{
+    font-size: 18px;
+   }
+
+   .carousel-button.prev, .carousel-button.next{
+    display: none;
+   }
+
+   body{
+    margin: 0%;
+    padding: 0%;
+   }
+   .header{
+    margin-top: 3vh;
+    border-radius: 0px;
+   }
 }
