--- a/code.css
+++ b/code.css
@@ -2,6 +2,7 @@ body{
     background-color: #23272a;
     padding: 0;
     font-family: SFMono-Regular,Menlo,Monaco,Consolas,liberation mono,courier new,monospace;
+    overflow-x: hidden;
 
 }
 
@@ -196,8 +197,7 @@ video{
 
 .wrapper{
     background-color: #36393F;
-    height: 94.5vh;
-    margin-top: 5.5vh;
+    height: 88vh;
     box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
@@ -205,7 +205,7 @@ video{
 
 .textchannels{
     width: 300px;
-    height: 94.5vh;
+    height: 88vh;
     font-size: 17px;
     background-color: #2c2f33;
 }
@@ -288,3 +288,84 @@ i{
     background-color: #42464D;
     color: white;
 }
+
+
+.codemessage{
+    width: 157.4vh;
+    position: absolute;
+    margin-left: 45vh;
+    margin-top: 16vh;
+}
+
+.message{
+    width: 157.4vh;
+    height: 88vh;
+    position: absolute;
+    margin-left: 45vh;
+}
+
+.message > p {
+    color: white;
+    position: absolute;
+    margin-left: 16.5vh;
+    margin-top: -7.5vh;
+    font-weight: 600;
+
+}
+
+.codemessage > p {
+    color: white;
+    position: absolute;
+    margin-left: 16.5vh;
+    margin-top: -7.5vh;
+    font-weight: 600;
+}
+
+
+img{
+    width: 15%;
+    height: 50px;
+    width: 50px;
+    margin-top: 2rem;
+    margin-left: 3rem;
+    border-radius: 50%;
+    background-image: url("/nskeys.png");
+        
+}
+
+.textcode{
+    height: 60vh;
+    width: 113vh;
+    background-color: #2F3136;
+    border: 1px solid #292B2F;
+    margin-left: 16.5vh;
+    margin-top: -4vh;
+    border-radius: 6px;
+    padding-left: 0.5rem;
+    color: #D1DDDE;
+    font-size: 12px;
+}
+
+.typing{
+    margin-bottom: 20px;
+    position: absolute;
+    margin-left: 16.5vh;
+    margin-top: -4.5vh;
+    font-weight: 600;
+    color: white;
+    width: 115vh;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 6px;
+    background-color: #2E3338;
+    height: 400px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #202225;
+    border-radius: 10px;
+  }
+
+  
