--- a/style.css
+++ b/style.css
@@ -117,11 +117,16 @@ span{
 video{
     inset: 0;
     width: 520px;
-    background-color: white;
-    margin-top: 20vh;
-    border: solid 2px white;
-    border-radius: 10px;
-    box-shadow: 0px 0px 25px -1px rgb(0 0 0);
+    margin-top: 23vh;
+    margin-left: 16vh;
+    border-radius: 6px;
+    border: none;
+    box-shadow: none;
+    background-color: none;
+}
+
+.vid{
+    background-color: none;
 }
 
 .hamburger{
@@ -196,7 +201,7 @@ video{
 
 .wrapper{
     background-color: #36393F;
-    height: 94.5vh;
+    height: 88vh;
     margin-top: 5.5vh;
     box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
@@ -205,7 +210,7 @@ video{
 
 .textchannels{
     width: 300px;
-    height: 94.5vh;
+    height: 88vh;
     font-size: 17px;
     background-color: #2c2f33;
 }
@@ -287,4 +292,63 @@ i{
 .mainlist:hover{
     background-color: #42464D;
     color: white;
+}
+
+.message{
+    width: 157.4vh;
+    height: 88vh;
+    position: absolute;
+    margin-left: 45vh;
+}
+
+.message > p {
+    color: white;
+    position: absolute;
+    margin-left: 16.5vh;
+    margin-top: -7.5vh;
+    font-weight: 600;
+
+}
+
+
+img{
+    width: 15%;
+    height: 50px;
+    width: 50px;
+    margin-top: 2rem;
+    margin-left: 3rem;
+    border-radius: 50%;
+    background-image: url("/nskeys.png");
+        
+}
+
+.textcode{
+    height: 60vh;
+    width: 113vh;
+    background-color: #2F3136;
+    border: 1px solid #292B2F;
+    margin-left: 16.5vh;
+    margin-top: -4vh;
+    border-radius: 6px;
+    padding-left: 0.5rem;
+    color: #D1DDDE;
+    font-size: 12px;
+}
+
+.typing{
+    margin-bottom: 20px;
+    position: absolute;
+    margin-left: 16.5vh;
+    margin-top: -4.5vh;
+    font-weight: 600;
+    color: white;
+    width: 115vh;
+}
+
+.addbot{
+    color: #00AFF4;
+}
+
+.addbot:hover{
+    text-decoration: underline 1px solid #00AFF4;
 }
