--- a/htu.css
+++ b/htu.css
@@ -59,43 +59,6 @@ a{
         -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
 }
 
-.buttoninv{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    vertical-align: bottom;
-}
-
-.invite{
-    width: 200px;
-    height: 45px;
-    border-radius: 10px;
-    border-style: none;
-    background-color: #7289da;
-    color: white;
-    font-family: SFMono-Regular,Menlo,Monaco,Consolas,liberation mono,courier new,monospace;;
-    font-size: 15px;
-    font-weight: bold;
-    box-shadow: 0 8px 16px rgb(153 170 181 / 30%);
-    transition: all 0.2s ease-out;
-    
-}
-
-.invite:hover{
-    background-color: white;
-    color: #7289da;
-    transition: 0.5s;
-    scale: 1.05;
-    cursor: pointer;
-}
-
-.carousel-button.prev:hover, .carousel-button.next:hover{
-    color: #7289da;
-    transition: 0.5s;
-    scale: 1.05;
-    cursor: pointer;
-}
 
 span{
     color: white;
@@ -196,7 +159,7 @@ video{
 
 .wrapper{
     background-color: #36393F;
-    height: 94.5vh;
+    height: 88vh;
     margin-top: 5.5vh;
     box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
@@ -205,7 +168,7 @@ video{
 
 .textchannels{
     width: 300px;
-    height: 94.5vh;
+    height: 88vh;
     font-size: 17px;
     background-color: #2c2f33;
 }
@@ -287,4 +250,61 @@ i{
 .mainlist:hover{
     background-color: #42464D;
     color: white;
+}
+
+
+.mainlist:hover{
+    background-color: #42464D;
+    color: white;
+}
+
+.message{
+    width: 157.4vh;
+    height: 88vh;
+    position: absolute;
+    margin-left: 45vh;
+}
+
+.message > p {
+    color: white;
+    position: absolute;
+    margin-left: 16.5vh;
+    margin-top: -7.5vh;
+    font-weight: 600;
+
+}
+
+
+img{
+    width: 15%;
+    height: 50px;
+    width: 50px;
+    margin-top: 2rem;
+    margin-left: 3rem;
+    border-radius: 50%;
+    background-image: url("/nskeys.png");
+        
+}
+
+.textcode{
+    height: 60vh;
+    width: 113vh;
+    background-color: #2F3136;
+    border: 1px solid #292B2F;
+    margin-left: 16.5vh;
+    margin-top: -4vh;
+    border-radius: 6px;
+    padding-left: 0.5rem;
+    color: #D1DDDE;
+    font-size: 12px;
+}
+
+.typing{
+    margin-bottom: 20px;
+    position: absolute;
+    margin-left: 16.5vh;
+    margin-top: -4.5vh;
+    font-weight: 600;
+    color: white;
+    width: 115vh;
 }
