--- a/style.css
+++ b/style.css
@@ -315,8 +315,8 @@ img{
     width: 15%;
     height: 50px;
     width: 50px;
-    margin-top: 2rem;
-    margin-left: 3rem;
+    margin-top: 5vh;
+    margin-left: 7vh;
     border-radius: 50%;
     background-image: url("/nskeys.png");
         
