--- a/style.css
+++ b/style.css
@@ -50,8 +50,8 @@ a{
 .header{
     background: linear-gradient(
         to right, 
-        #2c2f33 300px, 
-        #36393F 300px 100%
+        #2c2f33 45vh, 
+        #36393F 45vh 100%
         );
 
         box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
@@ -90,13 +90,6 @@ a{
     cursor: pointer;
 }
 
-.carousel-button.prev:hover, .carousel-button.next:hover{
-    color: #7289da;
-    transition: 0.5s;
-    scale: 1.05;
-    cursor: pointer;
-}
-
 span{
     color: white;
 }
@@ -116,7 +109,7 @@ span{
 
 video{
     inset: 0;
-    width: 520px;
+    width: 75vh;
     margin-top: 23vh;
     margin-left: 16vh;
     border-radius: 6px;
@@ -165,7 +158,7 @@ video{
     .nav-menu{
         position: absolute;
         right: -109%;
-        top: 45px;
+        top: 43px;
         gap: 0;
         flex-direction: column;
         background-color: #2c2f33;
@@ -173,6 +166,7 @@ video{
         transition: 0.3s;
         margin: 16px 0; 
         border-radius: 0px;
+        width: 21%;
     }
 
    h4{
@@ -208,7 +202,7 @@ video{
 }
 
 .textchannels{
-    width: 300px;
+    width: 45vh;
     height: 88vh;
     font-size: 17px;
     background-color: #2c2f33;
@@ -231,7 +225,7 @@ li{
     font-size: 17px;
     height: 40px;
     font-weight: 600;
-    width: 280px;
+    width: 42vh;
     margin-left: -30px;
     border-radius: 4px;
 
@@ -368,13 +362,5 @@ img{
 @media screen and (max-width: 890px){
     .currentchannel{
         display: none;
-    }
-}
-
-
-@media (max-width: 528px){
-    .nav-menu.active {
-        right: 0;
-
     }
 }
