--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ i{
     justify-content: center;
     font-size: 17px;
     font-weight: 600;
-    margin-left: 4px;
+    margin-left: -2vh;
 }
 
 .currentchannel > a{
