--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ li:focus{
 }
 
 i{
-    margin-left:15px;
+    margin-left: 2vh;
     font-size: 30px;
     font-weight: lighter;
     color: gray;
