--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body{
     background-color: #23272a;
     padding: 0;
+    margin: 0;
     font-family: SFMono-Regular,Menlo,Monaco,Consolas,liberation mono,courier new,monospace;
-
+    overflow: hidden;
 }
+
+
 
 html{
     height: 100vh;
@@ -159,7 +162,7 @@ video{
     }
 
     .nav-menu{
-        position: absolute;
+        position:absolute;
         right: -109%;
         top: 43px;
         gap: 0;
@@ -208,7 +211,7 @@ video{
 
 .wrapper{
     background-color: #36393F;
-    height: 88vh;
+    height: 100vh;
     margin-top: 5.5vh;
     box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
@@ -217,7 +220,7 @@ video{
 
 .textchannels{
     width: 45vh;
-    height: 88vh;
+    height: 100vh;
     font-size: 17px;
     background-color: #2c2f33;
 }
@@ -303,7 +306,7 @@ i{
 
 .message{
     width: 157.4vh;
-    height: 88vh;
+    height: 80vh;
     position: absolute;
     margin-left: 45vh;
 }
