--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ a{
     background: linear-gradient(
         to right, 
         #1e1f22 0vh 10vh,
-        #2c2f33 10vh 45vh, 
-        #36393F 45vh 100%
+        #2b2d31 10vh 45vh, 
+        #313338 45vh 100%
         );
 
         box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
@@ -131,38 +131,7 @@ video{
     background-color: none;
 }
 
-.hamburger{
-    display: none;
-    cursor: pointer;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-.hamburger > span{
-    
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    background-color: white;
-}
-
 @media(max-width:750px){
-    .hamburger{
-        display: block;
-    }
-    .hamburger.active .bar:nth-child(2){
-        opacity: 0;
-    }
-
-    .hamburger.active .bar:nth-child(1){
-        transform: translateY(8px) rotate(45deg);
-    }
-
-    .hamburger.active .bar:nth-child(3){
-        transform: translateY(-8px) rotate(-45deg);
-    }
 
     .nav-menu{
         position:absolute;
@@ -193,27 +162,19 @@ video{
    body{
     margin: 0%;
     padding: 0%;
+
    }
    .header{
     margin-top: 3vh;
     border-radius: 0px;
    }
-
-   .hotaction{
-    display: none;
-   }
-
-   .logo{
-    display: block;
-   }
-
    .message{
     display: none;
    }
 }
 
 .wrapper{
-    background-color: #36393F;
+    background-color: #313338;
     height: 100vh;
     margin-top: 5.5vh;
     box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
@@ -228,8 +189,8 @@ video{
     background: linear-gradient(
         to right, 
         #1e1f22 0vh 10vh,
-        #2c2f33 10vh 45vh, 
-        #36393F 45vh 100%
+        #2b2d31 10vh 45vh, 
+        #313338 45vh 100%
     );
 }
 
@@ -252,7 +213,7 @@ li{
     font-size: 17px;
     height: 40px;
     font-weight: 600;
-    width: 31.5vh;
+    width: 109%;
     margin-left: -30px;
     border-radius: 4px;
 
@@ -397,16 +358,19 @@ img{
     height: 100vh;
     position: absolute;
     margin-top: -6vh;
+    margin-left: -3.8vh;
 }
 
 .images > img{
     display: flex;
-    margin-left: 1vh;
     margin-bottom: -3vh;
+    margin-left: 50%;
+    margin-right: 50%;
 }
 
 
 .images > img:hover{
-    border-radius: 13px ;
+    border-radius: 13px;
     transition: 0.5s;
+    cursor: pointer;
 }
