--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ li{
     height: 35px;
     font-weight: 600;
     width: auto;
-    margin-left: -30px;
+    margin-left: -4.6vh;
     border-radius: 4px;
     width: 32vh;
 
