--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ a{
 .header{
     background: linear-gradient(
         to right, 
-        #1e1f22 0vh 10vh,
-        #2b2d31 10vh 45vh, 
+        #1e1f22 0px 67px,
+        #2b2d31 67px 45vh, 
         #313338 45vh 100%
         );
 
@@ -216,7 +216,7 @@ li{
     height: 35px;
     font-weight: 600;
     width: auto;
-    margin-left: -4.6vh;
+    margin-left: -30px;
     border-radius: 4px;
     width: 32vh;
 
