--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ a{
     text-decoration: none;
 }
 
-
 .title{
     display: flex;
     align-items: center;
@@ -34,6 +33,7 @@ a{
     scale: 1.3;
     margin-left: 10vh;
 }
+
 .header, .nav-menu{
     display: flex;
     grid-gap: 30px;
@@ -63,7 +63,6 @@ span{
     color: white;
 }
 
-
 .logo{
     display: none;
     }
@@ -76,8 +75,6 @@ span{
     margin-top: -5.2vh;
     margin-left: 10vh;
     padding-top: 1.25rem;
-
-
 }
 
 video{
@@ -236,9 +233,7 @@ i{
 
 }
 
-
 img{
-    width: 15%;
     height: 50px;
     width: 50px;
     margin-top: 5vh;
@@ -283,7 +278,6 @@ img{
     }
 }
 
-
 @media screen and (max-width: 1100px){
     .typing{
         width: 80vh;
@@ -296,23 +290,20 @@ img{
     }
 }
 
-
 .images{
     width: 10vh;
     height: 100vh;
     position: absolute;
-    margin-top: -9vh;
+    margin-top: -17vh;
     margin-left: -25px;
 }
 
 .images > img{
     display: flex;
     margin-bottom: -3vh;
-    margin-left: 50%;
-    margin-right: 50%;
+    margin-left: 33px;
     transition: 0.15s;
 }
-
 
 .images > img:hover{
     border-radius: 13px;
@@ -415,4 +406,12 @@ img:hover{
 .textbox > p{
     margin-left: 2vh;
     color: gray;
+}
+
+.underline{
+    height: 10px;
+    width: 50px;
+    color: red;
+    margin: 50px;
+    position: absolute;
 }
