--- a/style.css
+++ b/style.css
@@ -112,6 +112,8 @@ video{
    .message{
     display: none;
    }
+
+
 }
 
 .wrapper{
@@ -425,3 +427,44 @@ img:hover{
 .name > span{
     color: #7289da;
 }
+
+
+.page {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    max-width: 800px;
+    height: 100%;
+    background-color: #fff;
+    padding: 20px;
+    box-sizing: border-box;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .page.active {
+    transform: translateX(0%);
+  }
+  
+  .page-overlay {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6);
+    z-index: 2;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
+  
+  .page.active + .page-overlay {
+    opacity: 1;
+  }
+
+  @media screen and (min-width: 768px) {
+    .page {
+      display: none;
+    }
+  }
+  
