--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body{
     background-color: #23272a;
     padding: 0;
     margin: 0;
-    font-family: SFMono-Regular,Menlo,Monaco,Consolas,liberation mono,courier new,monospace;
     overflow: hidden;
+    font-family: SFMono-Regular,Menlo,Monaco,Consolas,liberation mono,courier new,monospace;
     background: linear-gradient(
         to right, 
         #1e1f22 0px 67px,
@@ -11,6 +11,11 @@ body{
         );
 }
 
+
+.everything{
+    position: relative;
+    overflow: hidden;
+}
 
 h1{
     font-size: 20px;
@@ -118,7 +123,7 @@ video{
 
 .wrapper{
     background-color: #313338;
-    height: 100%;
+    height: auto;
     margin-top: 5.5vh;
 }
 
@@ -474,3 +479,4 @@ img:hover{
         transform: translateX(30%);
     }
 }
+
