--- a/style.css
+++ b/style.css
@@ -474,9 +474,8 @@ img:hover{
 }
 
 
-@media(max-width:750px){
+/*@media(max-width:750px){
     .page{
         transform: translateX(30%);
     }
-}
-
+}/*
