--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ video{
 .wrapper{
     background-color: #313338;
     height: auto;
-    margin-top: 37px;
+    margin-top: 5.5vh;
 }
 
 .textchannels{
