--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ span{
     padding-left: 1.6rem;
     font-size: 17px;
     font-weight: 600;
-    color: grey;
+    color: grey;    
     margin-left: 10vh;
     padding-top: 1.25rem;
 }
@@ -122,9 +122,8 @@ video{
 }
 
 .textchannels{
-
     width: 45vh;    
-    height: 100vh;
+    height: 100%;
     font-size: 17px;
     background: linear-gradient(
         to right, 
@@ -429,6 +428,7 @@ img:hover{
 
 
 .page {
+    overflow: hidden;
     position: absolute;
     top: 0%;
     left: 0px;
