--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #23272a;
+    background-color: #1e1f22;
     padding: 0;
     margin: 0;
     overflow: hidden;
@@ -33,12 +33,15 @@ a{
     margin-left: 10vh;
 }
 
+.nav-menu{}
+
 .header, .nav-menu{
     display: flex;
     grid-gap: 30px;
     padding-left: 2rem ;
     padding-right: 2rem;
     height: 50px;
+    border-bottom: 1px solid #1e1f22;
 }
 
 .header{
@@ -117,7 +120,7 @@ video{
     background-color: #313338;
     height: auto;
     box-sizing: border-box;
-
+    margin-top: 2vh;
 }
 
 .textchannels{
