--- a/style.css
+++ b/style.css
@@ -33,8 +33,6 @@ a{
     margin-left: 10vh;
 }
 
-.nav-menu{}
-
 .header, .nav-menu{
     display: flex;
     grid-gap: 30px;
@@ -42,6 +40,17 @@ a{
     padding-right: 2rem;
     height: 50px;
     border-bottom: 1px solid #1e1f22;
+}
+
+.nav-menu2{
+    display: flex;
+    grid-gap: 30px;
+    padding-left: 2rem ;
+    padding-right: 2rem;
+    height: 50px;
+    align-items: center;
+    justify-content: flex-end;
+    float: right;
 }
 
 .header{
@@ -288,7 +297,7 @@ img{
     }
 }
 
-@media screen and (max-width: 137vh){
+@media screen and (max-width: 750px){
     .currentchannel{
         display: none;
     }
@@ -328,6 +337,7 @@ img{
     align-items: center;
     justify-content: center;
     margin-right: 10vh;
+    z-index: 2;
 }
 
 .guest > p:nth-child(2){
@@ -341,7 +351,7 @@ img{
     margin-bottom: 30px;
     height: 30px;
     width: 30px;
-    margin-left: -5vh;
+    margin-left: -30px;
 }
 
 .usercode{
@@ -349,7 +359,7 @@ img{
     font-size: 14px;
     margin-top: 35px;
     position: absolute;
-    margin-right: 5vh;
+    margin-right: 30px;
 }
 
 abbr {
@@ -442,6 +452,7 @@ img:hover{
     box-sizing: border-box;
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
+    z-index: 3;
   }
   
   .page.active {
@@ -455,36 +466,30 @@ img:hover{
     margin: 0%;
     display: flex;
     align-items: center;
-  }
-  
-  .header2 > img{
-    margin: 0;
-    height: 30px;
-    width: 30px;
-    padding-left: 1rem;
-    border-radius: 0;
+    justify-content: flex-end;
   }
 
   .header2 > p {
     color: white;
-    margin-left: 15px;
+    margin-left: 100px;
     font-weight: 600;
+    position: absolute;
+    left: 0;
   }
 
   .header2 > i {
-    margin-left: 20px;
-  }
-
-  .first_anchor{
-    margin-left: 150px;
+    margin-left: -20px;
+    position: absolute;
+    left: 0;
+    margin-right: 20px;
   }
 
   .header2 > a{
-    margin-top: 10px;
+    margin-bottom:-20px;
     margin-right: 5px;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 750px) {
     .page {
       display: none;
     }
@@ -495,4 +500,19 @@ img:hover{
     .page{
         transform: translateX(30%);
     }
-}/*
+}*/
+
+.page-toggle2{
+    margin: 0;
+    height: 30px;
+    width: 30px;
+    padding-left: 1rem;
+    border-radius: 0;
+    position: absolute;
+    left: 0;
+}
+
+.anchor{
+    margin-top: 10px;
+}
+
