--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ a{
     margin-right: auto;
     color: #7289da;
     scale: 1.3;
-    margin-left: 10vh;
+    margin-left: 67px;
 }
 
 .header, .nav-menu{
