--- a/style.css
+++ b/style.css
@@ -1,185 +1,189 @@
 body{
-    background-color: #1e1f22;
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
-    font-family: SFMono-Regular,Menlo,Monaco,Consolas,liberation mono,courier new,monospace;
+    padding: 0%;
+    margin: 0%;
+    background-color: rgb(30, 31, 34);
+    color: white;
+    font-family: SFMono-Regular, Menlo, Monaco, Consolas, "liberation mono", "courier new", monospace;
 }
-
 
 .everything{
-    overflow: hidden;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 69px 243px  1fr 225px;
+    grid-template-rows: 23px  50px  auto;
 }
 
-h1{
-    font-size: 20px;
-}
-
-h4{
-    color: lightgray;
-    border-radius: 3px;
-}
-
-a{
-    text-decoration: none;
-}
-
-.title{
+.bump{
     display: flex;
     align-items: center;
-    margin-right: auto;
-    color: #7289da;
-    scale: 1.3;
-    margin-left: 67px;
+    background-color: rgb(30, 31, 34);
+    grid-column: 1 / 5;
+    color: rgba(148,155,164,255);
+    padding-left: 0.7rem;
+    font-size: 13px;
 }
 
-.header, .nav-menu{
-    display: flex;
-    grid-gap: 30px;
-    padding-left: 2rem ;
-    padding-right: 2rem;
-    height: 50px;
-    border-bottom: 1px solid #1e1f22;
+.images, .images2{
+    display: grid;
+    justify-content: center;
+    grid-template-rows: 60px 2px 60px 60px 60px 60px 60px;
+    background-color: rgb(30, 31, 34);
+    grid-row: 2 / -1;
 }
 
-.nav-menu2{
-    display: flex;
-    grid-gap: 10px;
-    padding-right: 0.5rem;
-    height: 50px;
-    align-items: center;
-    justify-content: flex-end;
-    float: right;
+.images img, .images2 img{
+    margin-top: 7px;
+    transition: 0.15s;
+}
+
+.images img:hover, .images2 img:hover{
+    border-radius: 16px;
+    transition: 0.15s;
+    cursor: pointer;
+}
+
+.images > img, .images2 > img{
+    border-radius: 16px;
+}
+
+img:hover{
+    opacity: 100%;
 }
 
 .header{
-    background: linear-gradient(
-        to right, 
-        #1e1f22 0px 67px,
-        #2b2d31 67px 45vh, 
-        #313338 45vh 100%
-        );
+    background: linear-gradient( to right, #2b2d31 67px 243px, #313338 243px 100% );
+    grid-column: 2 / 5;
+    border-bottom: 1px solid rgb(30, 31, 34);
+    border-radius: 7px 0px 0px 0px;
+    display: grid;
+    grid-template-columns:243px 1fr;
+    grid-template-rows: 50px;
+    align-items: center;
 }
 
-.buttoninv{
-    position: relative;
+.name{
     display: flex;
-    justify-content: center;
     align-items: center;
-    vertical-align: bottom;
+    height: 50px;
+    width: 243px;
+}
+
+.navmenu{
+    width: auto;
+    height: 50px;
+    display: flex;
+}
+.navmenu > div:nth-child(2){
+    height: 50px;
+    display: flex;
+    align-items: center;   
+}
+.navmenu > div:nth-child(1){
+    height: 50px;
+    display: flex;
+    align-items: center;   
+}
+.navmenu > div:nth-child(1) > a > p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: 600;
+
+}
+
+.navmenu > div:nth-child(1) > a > p > img{
+    padding-left: 0.5rem;
+    height: 35px;
+    width: 35px;
+}
+
+.navmenu > div:nth-child(2){
+    position: absolute;
+    display: flex;
+    align-items: center;   
+    right: 0%;
+    height: 50px;
+    width: 385px;
+}
+
+.textchannels{
+    background-color: rgb(43, 45, 49);
+
+}
+.e{
+    display: grid;
+    grid-template-columns: 80px  1fr;
+    grid-template-rows: auto 110px;
+    background-color: rgb(49, 51, 56);
+    grid-column: 3 / 4;
+}
+
+.creators{
+    grid-column: 4 / 5;
+    background-color: rgb(43, 45, 49);
+}
+
+img{
+    height: 47px;
+    width: 47px;
+    border-radius: 50%;
+}
+
+.line{
+    display: flex;
+    align-self: center;
+    justify-self: center;
+    height: 2px;
+    width: 32px;
+    background-color: rgba(53,54,60,255);
+}
+
+.line2{
+    display: flex;
+    justify-self: center;
+    height: 1px;
+    width: 32px;
+    background-color: rgba(53,54,60,255);
+}
+
+.title{
+    color: #7289da;
+    padding-left: 1rem;
 }
 
 span{
     color: white;
 }
 
-.logo{
-    display: none;
-}
-
-.description{
-    padding-left: 1.6rem;
-    font-size: 17px;
-    font-weight: 600;
-    color: grey;    
-    margin-left: 67px;
-    padding-top: 1.25rem;
-}
-
-video{
-    inset: 0;
-    width: 75vh;
-    margin-top: 23vh;
-    border-radius: 6px;
-    margin-left: 110px;
-}
-
-.textchannels{
-    width: 45vh;    
-    height: 100%;
-    font-size: 17px;
-    background: linear-gradient(
-        to right, 
-        #1e1f22 0px 67px,
-        #2b2d31 67px 45vh, 
-        #313338 45vh 100%
-    );
-}
-
-@media(max-width:750px){
-
-    .textchannels{
-        background: linear-gradient(
-            to right, 
-            #1e1f22 0px 67px,
-            #2b2d31 67px 45vh, 
-            #2b2d31 45vh 100%
-        );
-    }
-    .nav-menu{
-        display: none;
-    }
-
-   h4{
-    margin: 16px 0;
-
-   }
-
-   .info{
-    font-size: 18px;
-   }
-
-   body{
-    margin: 0%;
-    padding: 0%;
-
-   }
-
-   .message{
-    display: none;
-   }
-
-   video{
-    width: 95% ;
-    border-radius: 20px;
-    margin-top: 30px;
-    margin-left: 0px;
-
-   }
-}
-.wrapper{
-    background-color: #313338;
-    height: auto;
-    box-sizing: border-box;
-    margin-top: 2vh;
-}
-
-sup{
-    font-size: 40px;
+h4 > sub{
+    margin-left: 140px;
+    color: rgba(203,203,206,255);
+    font-size:  17px;
 }
 
 ul{
-    list-style-type: none;
-    width: auto;
-    margin-left: 67px;
     display: grid;
-    align-self:center;
+    align-self: center;
+    align-items: center;
+    list-style-type: none;
+    padding: 0;
+    margin-top: -10px;
+
 }
 
-
 li{
+    list-style-type: none;
+    margin-bottom: 2px;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     align-items: center;
-    margin-bottom: 2px;
     color: gray;
-    font-size: 17px;
-    height: 35px;
-    font-weight: 600;
-    width: auto;
-    margin-left: -30px;
+    font-size: 15px;
+    height: 30px;
     border-radius: 4px;
-    width: 32vh;
-
+    width: 225px;
 }
 
 li:hover{
@@ -193,6 +197,15 @@ li:focus{
     color: white;
 }
 
+.textchannels > ul > li:nth-child(1){
+    background-color: #42464D;
+    color: white;
+}
+
+a{
+    text-decoration: none;
+}
+
 i{
     margin-left: 13px;
     font-size: 30px;
@@ -200,153 +213,32 @@ i{
     color: gray;
 }
 
-.test{
-    position: absolute;
-    margin-top: -26px;
-    margin-left: -22px;
-    font-size: 35px;
-    color: gray;
+.description{
+    padding-top: 0.3rem;
+    font-size: 13px;
+    font-weight: 600;
+    color: grey;    
 }
 
-.currentchannel{
-    color: lightgray;
-    position: absolute;
-    margin-left: 41vh;
-    display: flex;
-    margin-top: -5px;
+.description > sub{
+    padding-left: 0.4rem;
+    padding-right: 0.3rem;
 }
 
-.currentchannel > a > p{
+.guestbackground{
+    background-color: #232428;
+    width: 243px;
+    height: 45px;
+    bottom: 0px;
+    position: absolute;
     display: flex;
     align-items: center;
-    justify-content: center;
-    font-size: 17px;
-    font-weight: 600;
-}
-
-.currentchannel > a{
-    position: absolute;
-    margin-top: -4px;
-    width: 200px;
-}
-
-.mainlist{
-    background-color: #42464D;
-    color: white;
-}
-
-.mainlist:hover{
-    background-color: #42464D;
-    color: white;
-}
-
-.message{
-    width: 157.4vh;
-    height: 80vh;
-    position: absolute;
-    margin-left: 45vh;
-}
-
-.message > img{
-
-    margin-left: 45px; 
-
-}
-
-.message > p {
-    color: white;
-    position: absolute;
-    margin-left: 110px;
-    margin-top: -7.5vh;
-    font-weight: 600;
-}
-
-img{
-    height: 50px;
-    width: 50px;
-    margin-top: 5vh;
-    border-radius: 50%;
-}
-
-.textcode{
-    height: 60vh;
-    width: 113vh;
-    background-color: #2F3136;
-    border: 1px solid #292B2F;
-    margin-left: 16.5vh;
-    margin-top: -4vh;
-    border-radius: 6px;
-    padding-left: 0.5rem;
-    color: #D1DDDE;
-    font-size: 12px;
-}
-
-.typing{
-    margin-bottom: 20px;
-    position: absolute;
-    margin-left: 110px;
-    margin-top: -4.5vh;
-    font-weight: 600;
-    color: white;
-    width: 115vh;
-}
-
-.addbot{
-    color: #00AFF4;
-}
-
-.addbot:hover{
-    text-decoration: underline 1px solid #00AFF4;
-}
-
-@media screen and (max-width: 1300px){
-    .typing{
-        width: 95vh;
-    }
-}
-
-@media screen and (max-width: 1100px){
-    .typing{
-        width: 80vh;
-    }
-}
-
-@media screen and (max-width: 750px){
-    .currentchannel{
-        display: none;
-    }
-}
-
-.images{
-    width: 10vh;
-    position: absolute;
-    margin-top: -70px;
-    margin-left: -25px;
-}
-
-.images > img{
-    display: flex;
-    margin-bottom: -3vh;
-    margin-left: 33px;
-    transition: 0.15s;
-}
-
-.images > img:hover{
-    border-radius: 13px;
-    transition: 0.15s;
-    cursor: pointer;
 }
 
 .guest{
     height: 45px;
-    bottom: 0px;
-    position: absolute;
-    width: 35vh;
     display: flex;
     align-items: center;
-    margin-right: 10vh;
-    z-index: 4;
-    margin-left: 67px;
 }
 
 .guest > p:nth-child(2){
@@ -371,13 +263,85 @@ img{
     margin-left: 48px;
 }
 
-abbr {
+.creators > p {
+    padding-left: 1rem;
+    color: rgba(148,155,154,255);
+    font-size: 13px;
+    padding-top: 0.5rem;
+}
+.creators > ul > a > li{
+    height: 45px;
+    width: 210px;
+}
+
+.creators > ul > a > li > img{
+    height: 33px;
+    width: 33px;
+    margin-left: 10px;
+}
+
+.creators > ul > a:nth-child(2) > li > img{
+    object-fit: cover;
+}
+
+.modifiers{
+    position: absolute;
+    right: 0;
+    display: flex;
+    height: 2.5vh;
+    width: 75px;
+}
+
+.minimise, .size, .close{
+    width: 25px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.minimise:hover, .size:hover{
+    cursor: pointer;
+    background-color: rgba(45,46,51,255);
+}
+
+.close:hover{
+    cursor: pointer;
+    background-color: rgba(242,63,66,255);
+}
+
+.minimise > p{
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+}
+
+abbr img {
+    height: 40px;
+    width: 40px;
+    opacity: 70%;
+}
+
+
+
+abbr{
     display: inline-block;
     position: relative;
     height: 20px;
     text-decoration: none;
+    margin-right: 15px;
 }
-  
+
+abbr:hover::before {
+    content: '';
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    border: 8px solid transparent;
+    border-bottom-color: #111214;
+}
+
+
 abbr:hover::after {
     content: attr(data-title);
     display: flex;
@@ -385,7 +349,6 @@ abbr:hover::after {
     position: absolute;  
     left: 50%;
     transform: translateX(-50%);
-    bottom: -1.5em;
     white-space: nowrap;
     background-color: #111214;
     color: #cacbcf;
@@ -393,183 +356,207 @@ abbr:hover::after {
     padding: 0.25em 0.5em;
     font-size: 0.75em;
     border-radius: 4px;
-    margin-bottom: -19px;
-}
-  
-abbr:hover::before {
-    content: '';
-    position: absolute;
-    top: 13px;
-    left: 50%;
-    transform: translateX(-50%);
-    border: 8px solid transparent;
-    border-bottom-color: #111214;
-}
-  
-abbr > img{
-    margin-left: 0px;
-    margin-top: -15px;
-    height: 40px;
-    width: 40px;
-    opacity: 70%;
+    margin-bottom: -30px;
 }
 
-img:hover{
-    opacity: 100%;
-    transition: all 200ms;
-}
-
-.textbox{
-    width: 152vh;
-    height: 45px;
-    background-color: #383a40;
+.searchbox{
+    margin-right: 20px;
     border-radius: 5px;
-    margin-left: 4vh;
-    margin-top: 4vh;
+    margin-left: 10px;
+    padding-left: 0.5rem;
     display: flex;
     align-items: center;
+    height: 25px;
+    width: 200px;
+    background-color: rgba(30,31,34,255);
 }
 
-.textbox > p{
-    margin-left: 2vh;
-    color: gray;
+.searchbox > p {
+    font-size: 12px;
+    color: rgba(148,155,164,255);
 }
 
-.underline{
-    height: 10px;
-    width: 50px;
-    color: red;
-    margin: 50px;
-    position: absolute;
+li > img{
+    height: 30px;
+    width: 30px;
 }
 
-.name > span, .name2 > span{
+.e img{
+    justify-self: center;
+    margin-top: 1rem;
+    grid-row: 1/1;
+    background-color: #00AFF4;
+}
+.maintext{
+    font-weight: 300;
+    font-size: 13px;
+    padding-right: 1rem;
+    grid-column: 2/-1;
+}
+
+.maintext h4{
+    font-size: 14px;
+    margin: 0%;
+    padding-top: 1rem;
+}
+
+.maintext a{
+    color: #00AFF4;
+} 
+
+.maintext a:hover{
+    text-decoration: underline 1px solid #00AFF4;
+}
+
+.maintext span{
     color: #7289da;
 }
 
-
-.page {
-    overflow: hidden;
-    position: fixed;
-    top: 0%;
-    left: 0px;
-    width: 100%;
-    max-width: 800px;
-    height: 100%;
-    background-color: #31343b;
-    color: white;
-    box-sizing: border-box;
-    transform: translateX(100%);
-    transition: transform 0.3s ease-in-out;
-    z-index: 3;
-  }
-  
-  .page.active {
-    transform: translateX(0%);
-  }
-
-  .header2{
-    background-color: #2a2e30;
-    height: 50px;
-    padding: 0%;
-    margin: 0%;
+.textinput{
+    grid-column: 1/-1;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    border-bottom: 1px solid #1e2127;
+    justify-self: center;
+    align-self: center;
+    margin-top: 30px;
+    background-color: #383a40;
+    bottom: 0;
+    height: 45px;
+    width: 97.5%;
+    border-radius: 10px;
+}
+
+.textinput p{
+    color: grey;
+    padding-left: 1rem;
+}
+
+video{
+    width: 70vh;
+    border-radius: 10px;
+}
+
+
+@media only screen and (max-width: 1300px) {
+    video{
+      width: 50vh;
+    }
   }
 
-  .header2 > p {
-    color: white;
-    margin-left: 60px;
-    font-weight: 600;
-    position: absolute;
-    left: 0;
-  }
 
-  .header2 > i {
-    margin-left: -20px;
-    position: absolute;
-    left: 0;
-    margin-right: 20px;
-  }
 
-  .header2 > a{
-    margin-bottom:-20px;
-    margin-right: 5px;
-  }
+@media only screen and (max-width: 1100px) {
+    .creators{
+        display: none;
+    }
 
-  @media screen and (min-width: 750px) {
-    .page {
+    .e{
+        grid-column: 3/-1;
+    }
+}
+
+@media only screen and (max-width: 880px) {
+    video{
       display: none;
     }
-}
 
-
-/*@media(max-width:750px){
-    .page{
-        transform: translateX(30%);
+    .navmenu > div:nth-child(2) {
+        display: none;
     }
-}*/
-
-.hamburger{
-    margin: 0;
-    padding-left: 1rem;
-    position: absolute;
-    left: 0;
-}
-
-.hamburger:hover{
-    cursor: pointer;
-}
-
-.anchor{
-    margin-top: 10px;
 }
 
 
-.message2 > img {
-    position: absolute;
-    margin-left: 8px;
-    margin-top: 0;
-    height: 40px;
-    width: 40px;
-    margin-top: -2px;
-}
-
-.name2, .typing2{
-    margin-left: 59px;
-    margin-top: 20px;
-    font-weight: bold;
-}
-
-.typing2{
-    margin-top: -10px;
-    padding-right: 10px;
+@media only screen and (max-width: 1300px) {
+    .maintext{
+      grid-column: 2/4;
+    }
 }
 
 
-.guestbackground{
-    background: linear-gradient(
-        to right, 
-        #1e1f22 0px 67px,
-        #232428 67px 45vh
-        );  
-    width: 45vh;
-    height: 45px;
-    bottom: 0px;
-    position: absolute;
+@media only screen and (max-width: 700px) {
+    .textinput{
+        display: none;
+    }
+}
+
+
+@media only screen and (max-width: 610px) {
+    .everything{
+        display: none;
+    }
+}
+
+@media (min-width: 611px) {
+    .mobileview{
+        display: none !important;
+    }
+}
+
+
+.mobileview{
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 69px auto 69px;
+    grid-template-rows: 23px auto 100px;
+}
+
+
+.bump2{
+    grid-column: 1/-1;
+    height: 23px;
+    background-color: #1e1f22;
+}
+
+.images2{
+    grid-row: 2 / 3;
+    background-color: #1e1f22;
+}
+
+.textchannels2{
+    background-color: #2b2d31;
+    border-radius: 7px 0px 0px 0px;
+}
+
+.maincontent{
+    background-color: rgb(49, 51, 56);
+}
+
+footer{
     display: flex;
     align-items: center;
-    z-index: 2;
-    
+    justify-content: space-around;
+    background-color: #0f1316;
+    grid-column: 1/-1;
 }
 
-.bar{
-    display: block;
-    width: 20px;
-    height: 2px;
-    margin: 3px auto;
-    background-color: #b6babd;
+footer img{
+    width: 30px;
+    height: 30px;
+}
 
+.textchannels2  li{
+    width: 95%;
+}
+
+.textchannels2  ul{
+    display: grid;
+    align-items: center;
+    margin-top: 0;
+    width: auto;
+}
+
+.textchannels2 > div{
+    display: flex;
+    align-items: center;
+    height: 50px;
+    width: auto;
+}
+
+.textchannels2 > div > h4{
+    display: flex;
+    align-self: center;
+}
+
+.textchannels2 > div > h4 > sub{
+    margin-left: 0;
 }
