--- a/style.css
+++ b/style.css
@@ -204,6 +204,10 @@ h1{
 
 @media only screen and (max-width: 450px) {
 
+    .button > p > span{
+        display: none;
+    }
+
     .logo{
         padding-left: 1.5rem;
     }
